# sign-me-up

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  justfile  nginx.conf  sqlite.dockerfile
backend/: Cargo.toml
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts
frontend/src/components/: CreateEvent.tsx  DeleteGroupDialog.tsx  EventDetails.tsx  EventView.tsx  GroupAccordion.tsx  GroupCard.tsx  GroupForm.tsx  Landing.tsx
frontend/src/lib/: api.ts  router.tsx  schemas.ts  utils.ts
frontend/src/routes/: __root.tsx  create.tsx  event.$eventId.tsx  index.tsx
frontend/src/routes/event/$eventId/: edit.tsx  index.tsx  register.tsx
scripts/: init_db.sh  schema.sql  seed.sql  seed_db.sh  start.sh
