[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = {version = "0.6.2", features = ["trace", "cors"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
